Fix issue 8 Text alignment in Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ input, select, button, textarea {
 }
 
 #canvas {
-    margin: 5px auto;
+    margin: 0 auto;
 }
 
 #canvas-container {
@@ -128,7 +128,7 @@ input, select, button, textarea {
 
 #bottom-menus {
     width: 295px;
-    margin: 10px auto 0 auto;
+    margin: 4px auto 0 auto;
     height: 40px;
     font: 14px Raleway;
     color: #C7C7C7;
@@ -319,6 +319,7 @@ input, select, button, textarea {
 
 #product-sides-switch {
     width: 295px;
+    height: 10px;
     margin: 0 auto;
     text-align: center;
 }
@@ -1790,6 +1791,7 @@ input, select, button, textarea {
     opacity: 0;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 .text-control-align.text-control-align-left {
@@ -2199,12 +2201,13 @@ input, select, button, textarea {
 .font-list__item {
     position: relative;
     float: left;
+    width: 143px;
     padding: 5px 15px;
 }
 
 .font-list__item a {
     color: #bfbfbf;
-    font-size: 25px;
+    font-size: 22px;
 }
 
 .font-list__item a:hover {
